objects/NAF__c.object
<CustomObject>
    <description>Une table de référence NAF/Code APE</description>
    <fields>
        <fullName>CODE_APE__c</fullName>
        <externalId>true</externalId>
        <label>CODE APE</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_NACE__c</fullName>
        <label>Code NACE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portefeuille_Employabilit_Th_orique__c</fullName>
        <description>Répartition NAF par portefeuille pour Employabilité</description>
        <inlineHelpText>Affectation portefeuille par défaut pour Employabilité</inlineHelpText>
        <label>Portefeuille Employabilité Théorique</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secteur__c</fullName>
        <label>Secteur</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>x18caracteres__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>x18caracteres</label>
        <type>Text</type>
    </fields>
    <label>NAF</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Code_NACE__c</columns>
        <columns>CODE_APE__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de NAF</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>